# ssh

./: .gitignore  CMakeLists.txt  a.out  bash  bash.c  broadcast_client  broadcast_client.c  broadcast_server  broadcast_server.c  client  client.c  lev_c  lev_client.c  lev_s  lev_server.c  log  log.c  logfile.txt  logs  pswd  pswd.c  server  server.c  ssh_client.c  ssh_lib.h  ssh_server.c  term  term.c
client/: CMakeLists.txt
client/headers/: client.h  ssh_lib.h
client/sources/: client.h  ssh_client.c  ssh_lib.c  ssh_lib.h
include/: client.h  server.h  ssh_lib.h
lib/: ssh_lib.c
server/: CMakeLists.txt
server/headers/: server.h  ssh_lib.h
server/sources/: ssh_lib.c  ssh_server.c
src/: client  server  ssh_client.c  ssh_server.c
